Fix edit icons alignment

--- a/app/assets/stylesheets/dreams.css.sass
+++ b/app/assets/stylesheets/dreams.css.sass
@@ -1,18 +1,18 @@
 header
   .buttons
-    margin: 15px 0 10px
+    margin: 7px 0
 
   .done
     font-size: 0.9em
 
   .edit, .edit:hover
     color: rgb(255,211,84)
+    float: left
+    margin-right: 4px
 
   .new, .new:hover
     color: rgb(51,217,88)
-
-    i
-      vertical-align: -22%
+    float: left
 
 // Landscape phone and larger
 @media (min-width: 480px)
